# gerg_geometric_shapes

./: Cargo.toml  LICENSE  README.md
src/: circle.rs  lib.rs  line.rs  line_segment.rs  oriented_rectangle.rs  range.rs  rectangle.rs
