[package]
name = "gerg_geometric_shapes"
version = "0.1.0"
authors = [ "Greg Moller <greg.moller@gmail.com>" ]
edition = "2021"
description = "Some basic geometric shapes."
readme = "README.md"
repository = "https://github.com/gmoller/gerg-geometric_shapes"
license = "MIT"
keywords = [ "gamedev" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.13.0"
float-cmp = "0.9.0"